--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,15 @@ html,body {
     padding: 0;
     overflow: hidden;
 }
+
+button {
+    background: none;
+    border:none;
+    font-size: 2rem;
+}
+button:hover {
+    background: #5B8E7D;
+}
+.active, button:focus, button:active {
+    background: #F4A259;
+}
