--- a/style.css
+++ b/style.css
@@ -7,3 +7,13 @@ body {
 canvas {
     display: block;
 }
+
+.townNameInput {
+    background: none;
+    border: none;
+    outline: none;
+    width: 400px;
+    height: 100px;
+    color: #fff;
+    font-size: 2rem;
+}
