--- a/style.css
+++ b/style.css
@@ -8,12 +8,31 @@ canvas {
     display: block;
 }
 
-.townNameInput {
+button,label {
+    font-size: 3rem;
+    height: 100px;
+    width: 100px;
     background: none;
     border: none;
     outline: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+button:hover,label:hover {
+    cursor: pointer;
+    background-color: rgba(255,255,255,0.1);
+}
+input[type="file"] {
+    display: none;
+}
+
+.townNameInput {
+    font-size: 2rem;
     width: 400px;
     height: 100px;
+    background: none;
+    border: none;
+    outline: none;
     color: #fff;
-    font-size: 2rem;
 }
