Fixed scroll in header bug

--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ input[type="file"] {
         background-color: rgba(0,0,0,0);
     }
 
-    100 {
+    100% {
         background-color: var(--color_success);
     }
 }
