--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-
+[hidden] {
+    display: none !important;
+}
 html,
 body {
     margin: 0;
@@ -110,4 +112,17 @@ input[type="file"] {
         background-color: var(--color_success);
     }
 }
+
+.detail_pane_container {
+    width: 100vw;
+    height: 50px;
+    display: flex !important;
+    flex-direction: row;
+    justify-content: center;
+    gap: 15px;
+}
+.detail_pane_container > button {
+    width: 50px;
+    height: 50px;
+    font-size: 32px;
 }
