--- a/style.css
+++ b/style.css
@@ -126,3 +126,31 @@ input[type="file"] {
     height: 50px;
     font-size: 32px;
 }
+
+.pane_container {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--color_light);
+    border: 4px solid var(--color_dark);
+    overflow-y: scroll;
+}.pane_first_row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.pane_title {font-family: 'MedievalSharp', cursive;
+    font-size: 3rem;
+    padding: 0.5rem 1rem;
+}
+.pane_close {
+    font-size: 2rem;
+    right: 0;
+    width: 40px;
+    height: 40px;
+    color: var(--color_error)
+}
+.pane_close:hover{
+    color:var(--color_dark)
+}
+
+}
