--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@ body {
     margin: 0;
     padding: 0;
     overflow: hidden;
+    -webkit-user-select: none;
+        /* Safari */
+        -ms-user-select: none;
+        /* IE 10 and IE 11 */
+        user-select: none;
+        /* Standard syntax */
 }
 
 .mobile_overlay {
